Update PersonalMan dependencies